<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".MainActivity"
   android:background="@drawable/qw" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sa"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:layout_margin="10dp"
    android:orientation="vertical"

   >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/q1"
        android:textSize="15sp"
        android:textStyle="bold"/>
<RadioGroup
    android:id="@+id/que1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="15dp">
    <RadioButton
        android:id="@+id/qu1a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/q1a"/>
    <RadioButton
        android:id="@+id/qu1b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/q1b"/>
    <RadioButton
        android:id="@+id/qu1c"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/q1c"/>
    <RadioButton
        android:id="@+id/qu1d"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/q1d"/>
</RadioGroup>
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_margin="10dp"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q2"
                android:textSize="15sp"
                android:textStyle="bold"/>
            <RadioGroup
                android:id="@+id/que2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp">
                <RadioButton
                    android:id="@+id/qu2a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q2a"/>
                <RadioButton
                    android:id="@+id/qu2b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q2b"/>
                <RadioButton
                    android:id="@+id/qu2c"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q2c"
                    android:layout_marginBottom="1dp"/>
                <RadioButton
                    android:id="@+id/qu2d"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q2d"/>
            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q3"
                android:textSize="15sp"

                android:textStyle="bold"/>
            <RadioGroup
                android:id="@+id/que3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp">
                <RadioButton
                    android:id="@+id/qu3a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q3a"/>
                <RadioButton
                    android:id="@+id/qu3b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q3b"/>
                <RadioButton
                    android:id="@+id/qu3c"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q3c"/>
                <RadioButton
                    android:id="@+id/qu3d"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q3d"/>
            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q4"
                android:textSize="15sp"
                android:textStyle="bold"/>
            <RadioGroup
                android:id="@+id/que4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp">
                <RadioButton
                    android:id="@+id/qu4a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q4a"/>
                <RadioButton
                    android:id="@+id/qu4b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q4b"/>
                <RadioButton
                    android:id="@+id/qu4c"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q4c"/>
                <RadioButton
                    android:id="@+id/qu4d"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q4d"/>
            </RadioGroup>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sb"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q5"
                android:textSize="15sp"
                android:textStyle="bold"/>
          <CheckBox
              android:id="@+id/qu5a"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/q5a"/>
            <CheckBox
                android:id="@+id/qu5b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q5b"/>
            <CheckBox
                android:id="@+id/qu5c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q5c"/>
            <CheckBox
                android:id="@+id/qu5d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q5d"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical"
            >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q6"
            android:textSize="15sp"
            android:textStyle="bold"/>
        <CheckBox
            android:id="@+id/qu6a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q6a"/>
        <CheckBox
            android:id="@+id/qu6b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q6b"/>
        <CheckBox
            android:id="@+id/qu6c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q6c"/>
        <CheckBox
            android:id="@+id/qu6d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q6d"/>
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q7"
                android:textSize="15sp"
                android:textStyle="bold"/>
            <CheckBox
                android:id="@+id/qu7a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q7a"/>
            <CheckBox
                android:id="@+id/qu7b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q7b"/>
            <CheckBox
                android:id="@+id/qu7c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q7c"/>
            <CheckBox
                android:id="@+id/qu7d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q7d"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sc"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/q8"/>
    <EditText
        android:id="@+id/qu8"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_marginRight="150dp"
        android:inputType="number"/>

</LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/q9"/>
            <EditText
                android:id="@+id/qu9"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginRight="150dp"
                android:inputType="number"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/q10"/>
            <EditText
                android:id="@+id/qu10"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginRight="150dp"
                android:inputType="number"/>

        </LinearLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:onClick="buttonClick"/>
        <Button
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:onClick="reset"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
           />
        </RelativeLayout>
</LinearLayout>


</ScrollView>